# fathiya-core

./: .env  .gitignore  404.html  README_COMMAND_CENTER_v0.md  eslint.config.js  hexstrike_server.py  index.html  netlify.toml  package.json  test_imports.py  vite.config.ts
.bolt/: mcp.json
public/: CNAME
services/agent-runtime/: .env.example  README.md  pyproject.toml
services/agent-runtime/config/: command_profiles.json  connector_profiles.json
services/agent-runtime/fathiya_runtime/: __init__.py  cli.py  config.py  integrations.py  knowledge_mission.py  knowledge_watcher.py  learning.py  local_api.py  local_settings.py  medium_intel.py  models.py  planner.py  quiet_io.py  retrieval.py  risk.py  store.py  tools.py  trading.py  worker.py  zapier_mcp.py
services/agent-runtime/tests/: test_knowledge_watcher.py  test_learning.py  test_local_api.py  test_local_settings.py  test_n8n_connector_workflow.py  test_trading.py  test_vertical_slice.py
services/agent-runtime/tools/: import_awareness_security_corpus.py
services/agent-runtime/tools/security_core/fathiya_core/: main.py
services/agent-runtime/tools/security_core/fathiya_core/agents/: __init__.py  evaluator.py  framer.py  solver.py
services/agent-runtime/tools/security_core/fathiya_core/config/: __init__.py  models.py  policies.py  settings.py
services/agent-runtime/tools/security_core/fathiya_core/core/: benchmark.py  hooks.py  logger.py  memory.py  orchestrator.py  policy_engine.py  router.py  verifier.py
services/agent-runtime/tools/security_core/fathiya_core/memory/: __init__.py  session_memory.py
(+691 files in other folders)
